# moai

./: README.md
docs/: ARCHITECTURE.md
mcore/: Cargo.toml
mcore/src/: main.rs
