[package]
name = "mcore"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui       = "0.29"
crossterm     = "0.28"
reqwest       = { version = "0.12", features = ["json", "stream"] }
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
futures-util  = "0.3"
bytes         = "1"
